--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,19 @@
+@font-face {
+    font-family: header;
+    src: url(../assets/BebasNeue-Regular.ttf);
+}
+
 html {
     width: 100%;
     height: 100%;
     margin: 0;
+    --ship: #172554;
+    --hover: #60a5fa;
+    --bg: #60a5fa;
+    --dark: #1e3a8a;
+    --default: #dbeafe;
+    --enemy-hit: #be123c;
+    --miss: #3b82f6;
 }
 
 body {
@@ -9,15 +21,50 @@ body {
     height: 100%;
     margin: 0;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--bg);
+    font-family: header;
+    color: var(--ship);
+}
+
+h1 {
+    margin: 0;
+    margin-top: 20px;
+    font-size: 4em;
 }
 
 #mainContainer {
     width: 80%;
-    height: 100%;
+    height: 80%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    position: relative;
+    z-index: 0;
+}
+
+#playerGrid {
+    z-index: 1;
+}
+
+#computerGrid {
+    position: absolute;
+    right: 5%;
+    visibility: hidden;
+}
+
+#orientationBtn {
+    margin-bottom: 20px;
+    width: 200px;
+    height: 50px;
+}
+
+#startBtn {
+    margin-top: 20px;
+    width: 100px;
+    height: 30px;
 }
 
 .row {
