--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,9 @@ html {
     width: 100%;
     height: 100%;
     margin: 0;
-    --ship: #172554;
+    --dark: #172554;
     --hover: #93c5fd;
+    --ship: #93c5fd;
     --bg: #60a5fa;
     --dark: #1e3a8a;
     --default: #dbeafe;
@@ -25,7 +26,7 @@ body {
     flex-direction: column;
     background-color: var(--bg);
     font-family: header;
-    color: var(--ship);
+    color: var(--dark);
     position: relative;
 }
 
@@ -99,10 +100,14 @@ h1 {
     width: 50px;
     height: 50px;
     border: 1px solid black;
+    position: relative;
 }
 
-.ship {
-    background-color: red;
+img {
+    position: absolute;
+    z-index: 4;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 #victoryCover {
